# pr2_open_b2_door_demo

./: CMakeLists.txt  package.xml
demo/au/base_laser_door_recog/: CMakeLists.txt  package.xml
demo/au/base_laser_door_recog/src/: least_squares_circle_v1d.py  line_detector.cpp
demo/au/dual_arm_door_manip/: extended-graph.l  generate-contact-nodes.l  main.l  make-602exp-door.l  parallel-ik.l
demo/au/pr2_73b72_door_demo/euslisp/: main.l  make-door.l  move-to-door-front.l
euslisp/: calc-dtau-dtheta.l  close-door.l  fit-door-model-to-line-segment.l  main.l  move-to-door-front.l  open-door.l  pull-open-door.l  push-open-door.l  recog-door-line-seg.l
euslisp/contact_state/: calc-dtau-dtheta.l  extended-classes.l  extended-graph.l  extended-irtmodel.l  extract-motion.l  generate-contact-nodes.l  generate-transition-graph.l  graph-rule.l  graph-search.l  hoge.l  main.l  make-602exp-door.l  make-73b2-door.l  make-door.l  moveit-door-test.l  parallel-ik.l  search-motion.l  test-calc-dtau-dtheta.l  write-load-data.l
euslisp/contact_state/old_codes/: graph-search.l  search-motion.l
euslisp/contact_state/optimize-posture-joint-loads/: calc-dtau-dtheta.l
euslisp/contact_state/plot/: plot_null_torque_change.py  plot_optimized_torque_comparision.py
launch/: base_scan_to_cloud.launch  perception.launch
pr2_open_b2_door_demo/: CMakeLists.txt
pr2_open_b2_door_demo/euslisp/: main.l  make-door.l  move-to-door-front.l
pr2_open_b2_door_demo/launch/: perception.launch
src/: example.cpp  least_squares_circle_v1d.py  line_detector.cpp
(+4 files in other folders)
